# simple_calculator_with_spec_driven_development

calc/: .gitignore  README.md  pyproject.toml
calc/.specify/memory/: constitution.md
calc/history/prompts/calculator/: 0002-clarify-calculator-spec-requirements.spec.prompt.md  0003-finalize-calculator-spec.spec.prompt.md  0005-clarify-spec-ambiguities.spec.prompt.md  0006-create-calculator-implementation-plan.plan.prompt.md  0007-generate-calculator-tasks.tasks.prompt.md  0009-implement-python-cli-calculator.green.prompt.md  0011-finalize-implementation-wrap-up.green.prompt.md  0012-fix-module-not-found-error.green.prompt.md
calc/history/prompts/constitution/: 0001-update-project-constitution-with-principles-and-standards.constitution.prompt.md
calc/history/prompts/general/: 0008-push-calculator-planning-artifacts-to-master.general.prompt.md  0010-explain-how-to-run-the-calculator.general.prompt.md
calc/specs/calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
calc/specs/calculator/contracts/: api-contract.md
calc/src/calculator/: __main__.py  cli.py  constants.py  evaluator.py  models.py  parser.py
calc/tests/integration/: test_cli_flow.py  test_state.py
calc/tests/unit/: test_cli.py  test_evaluator.py  test_parser.py
testing/: sidebars.js
testing/.specify/memory/: constitution.md
testing/docs/1-robotic-nervous-system/: chapter-1-foundations-of-ros2.md  chapter-2-ai-to-controller-integration.md  chapter-3-urdf-for-humanoids.md
testing/specs/1-robotic-nervous-system/: research.md  spec.md
